--- a/EC440 Operating Systems/Project 1 - Shell/README
+++ b/EC440 Operating Systems/Project 1 - Shell/README
@@ -1,4 +1,4 @@
-Project 1, Big Deadline
+# Project 1
 by Rawisara Chairat
 
 The task is to create a simple shell that can read input, parse commands, and execute them. Below is a detailed overview of the implementation in myshell.c.
